chore: applying convetion in dtos because isnt need a domain object